deploy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 5
  selector:
    matchLabels:
      name: backend
  template:
    metadata:
      labels:
        name: backend
    spec:
      containers:
        - name: app
          image: codekoeni/full-stack:b2.6
          ports:
            - containerPort: 8000
