deploy/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      name: frontend
  template:
    metadata:
      labels:
        name: frontend
    spec:
      containers:
        - name: app
          image: codekoeni/full-stack:f2.3
          ports:
            - containerPort: 8080
